# python-api

./: MANIFEST.in  README.md  create_docs.sh  pyproject.toml  requirements.txt
daselement_api/: __init__.py  _version.py  api.py  manager.py
docs/: index.html  search.js
docs/daselement_api/: api.html
docs/python-api/daselement_api/: api.html
docs_template/: dark-mode.css  module.html.jinja2  toggle-button.css
examples/: create_config_and_library.py  get_element.py  get_paths_from_disk.py  ingest_new_element.py  predict_category.py
